--- a/src/screens/SwipeScreen.css
+++ b/src/screens/SwipeScreen.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100dvh;
+  padding-top: calc(52px + env(safe-area-inset-top, 0px));
   padding-bottom: 80px;
   overflow: hidden;
   position: relative;
